--- a/gumball.html
+++ b/gumball.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-    <title>Gumball Machine (Node.js - Master Branch)</title>
+    <title>Gumball Machine (Node.js - Indira Branch)</title>
 </head>
 
 <body>
-<h1 align="center">Welcome to the Gumball Machine (Node.js - Master Branch)</h1>
+<h1 align="center">Welcome to the Gumball Machine (Node.js - Indira Branch)</h1>
 
 <!-- FORM SECTION -->
 <form name="gumballform" method="post" action="">
